--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇩🇪 德国-1.87MB/s(Youtube:不良林), server: 193.108.117.75, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-201.1KB/s(Youtube:不良林), server: 167.88.61.175, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林), server: 167.88.61.175, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇩🇪 德国-346.3KB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇨🇦 加拿大-1.87MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.56MB/s(Youtube:不良林), server: 168.138.38.51, port: 11188, type: vmess, uuid: 92a8da3c-f87f-4294-b40b-631c8d1d4b3b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 168.138.38.51}}
-  - {name: 🇨🇦 加拿大-388.7KB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-181.6KB/s(Youtube:不良林), server: emby.metalink.cf, port: 8096, type: vmess, uuid: b8f9b514-4835-493b-e9a0-c135bbeb764b, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-463.0KB/s(Youtube:不良林), server: 167.88.61.175, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇨🇦 加拿大-855.2KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-682.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇩🇪 德国-849.4KB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: hd-3.ienai.xin, port: 11000, type: vmess, uuid: 03b188df-f7be-4038-8bc3-ffd2edb2b56a, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-408.4KB/s(Youtube:不良林), server: hd-1.ienai.xin, port: 443, type: vmess, uuid: 03b188df-f7be-4038-8bc3-ffd2edb2b56a, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ienai/ACOT_ddf1dcec-43e8-4e59-ae41-5382e18a7729:878047eae84dfce4b2d895aa7252421f/, ws-headers: {Host: hd-1.ienai.xin}}
+  - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: 167.88.61.175, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-5.69MB/s(Youtube:不良林), server: lz717.aijiasu.xyz, port: 30803, type: vmess, uuid: 5833a0df-fa04-446b-d6cf-00ab174097df, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.06MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 未知国家-4.24MB/s(Youtube:不良林), server: us-lax-ctg-01-tr.cdn.savoy.click, port: 889, type: trojan, password: uDTmEAGwuCUZXZvwhWJk, sni: us-lax-ctg-01-tr.cdn.savoy.click, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-2.38MB/s(Youtube:不良林), server: hinet.52147.top, port: 443, type: trojan, password: 2ad895a4-90e1-460d-9291-bbfb3463190e, sni: hinet.52147.top, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇩🇪 德国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇩🇪 德国-346.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-388.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-181.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-463.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-855.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-682.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-849.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-408.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 未知国家-4.24MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.38MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇩🇪 德国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇩🇪 德国-346.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-388.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-181.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-463.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-855.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-682.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-849.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-408.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 未知国家-4.24MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.38MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇩🇪 德国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇩🇪 德国-346.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-388.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-181.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-463.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-855.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-682.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-849.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-408.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 未知国家-4.24MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.38MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-2.38MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇩🇪 德国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇩🇪 德国-346.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-388.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-181.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-463.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-855.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-682.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-849.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-408.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 未知国家-4.24MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.38MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇩🇪 德国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇩🇪 德国-346.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-388.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-181.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-463.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-855.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-682.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-849.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-408.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 未知国家-4.24MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.38MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇩🇪 德国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇩🇪 德国-346.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-388.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-181.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-463.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-855.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-682.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-849.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-408.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 未知国家-4.24MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.38MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇩🇪 德国-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇩🇪 德国-346.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-388.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-181.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-463.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-855.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-682.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-849.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-408.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 未知国家-4.24MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.38MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
